HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignConst/Expected.uv
//! Expected diagnostic metadata for the AssignConst rejected-source specimen.

expectedDiagnostic("E-SEM-3132", "rule.18.Assign-Const-Err")
